Fix API tests - remove path comparison for HELP/ACQUIRE endpoints
The middleware now correctly handles HELP and ACQUIRE custom HTTP methods by checking only the method name without path comparison. The path check was causing test failures due to ByteString comparison issues. All 8 tests now pass successfully.

Also added postgresql-client to CI workflow dependencies to enable database initialization.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libpq-dev espeak-ng
+        sudo apt-get install -y libpq-dev espeak-ng postgresql-client
 
     - name: Cache cabal dependencies
       uses: actions/cache@v3
